--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CardGame-EBACAC25-FBD8-4E00-AF34-9BE427D52406;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLExpress;Database=CardGame;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
